--- a/style.css
+++ b/style.css
@@ -567,7 +567,7 @@ section.videos-section {
 }
 .link:hover {
   background-color: #0d47a1;
-  color: #00FFFF;
+  color: #00acc1;
 }
 
 .sub-title {
@@ -615,7 +615,7 @@ section.videos-section {
 
 .button:hover {
   background-color: #0d47a1;
-  color: #00FFFF;
+  color: #00acc1;
 }
 
 .experiments {
@@ -639,4 +639,402 @@ section.videos-section {
 
 .experiment p {
   margin: 5px 0;
+}
+
+/* Styles pour la section "Les Maths dans la Vie Quotidienne" */
+.maths-quotidienne-section {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.maths-quotidienne-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.maths-quotidienne-item {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.maths-quotidienne-item h3 {
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+.maths-quotidienne-item p {
+  color: #777;
+}
+
+.maths-quotidienne-item a.button {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #0d47a1;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.maths-quotidienne-item a.button:hover {
+  background-color: #00acc1;
+}
+.maths-image {
+  width: 600px; 
+  height: 300px; 
+  object-fit: cover; 
+  border-radius: 5px; 
+}
+
+.content {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+
+.intro {
+  margin-bottom: 40px;
+}
+
+/* Styles pour les liens des niveaux */
+.level-links {
+  display: flex;
+  justify-content: center;
+}
+
+.level-link {
+  text-decoration: none;
+  color: #007bff; /* Couleur du lien */
+  font-weight: bold;
+  padding: 10px 20px;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  margin: 0 10px;
+  transition: background-color 0.3s ease;
+}
+
+.level-link:hover {
+  background-color: #007bff; /* Couleur au survol */
+  color: white;
+}
+
+.search-tip {
+  font-size: 14px;
+  color: #777;
+  margin-top: 10px;
+}
+.intro {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.levels {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.level-link {
+  font-size: 18px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.level-content {
+  display: none;
+}
+
+.active .level-content {
+  display: block;
+}
+
+.level-content h2 {
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+.pdf-link {
+  display: block;
+  margin-bottom: 10px;
+  text-decoration: none;
+  color: #333;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+.pdf-link:hover {
+  background-color: #e0e0e0;
+}
+
+.search-tip {
+  margin-top: 20px;
+  text-align: center;
+}
+
+/* Sub-level styles */
+.sub-level {
+  margin-top: 30px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+}
+
+.sub-level h1 {
+  font-size: 24px;
+}
+
+/* Adjustments for responsiveness */
+@media screen and (max-width: 768px) {
+  .menu li {
+      display: block;
+      margin-bottom: 10px;
+  }
+}
+
+.exercise {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Style pour les titres des sections d'exercices */
+.exercise h2 {
+  font-size: 24px;
+  margin-top: 0;
+  color: #333;
+}
+
+/* Style pour les blocs de code */
+.exercise code {
+  display: block;
+  font-family: 'Courier New', monospace;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  padding: 10px;
+  overflow-x: auto;
+  line-height: 1.5;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+/* Style pour les zones de code dans les paragraphes */
+.exercise p code {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  padding: 2px 5px;
+  border-radius: 3px;
+  text-align: left;
+}
+pre{
+  text-align: left;
+}
+
+/* Style pour les liens vers les corrections PDF */
+.pdf-link {
+  display: inline-block;
+  margin-top: 10px;
+  background-color: #007bff;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.pdf-link:hover {
+  background-color: #0056b3;
+}
+
+/* Style pour les liens de copie de code (optionnel) */
+.copy-code {
+  display: inline-block;
+  background-color: #ddd;
+  color: #333;
+  padding: 2px 5px;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.copy-code:hover {
+  background-color: #ccc;
+}
+
+.sub-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.cs {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.sub-menu:hover .cs,
+.cs:hover {
+  display: block;
+}
+
+
+
+
+
+
+/* articles */
+nav ul {
+  list-style-type: none; 
+  padding: 0; 
+}
+
+nav li {
+  margin-bottom: 10px; 
+}
+
+nav a {
+  font-size: 18px; 
+  color: #007BFF; 
+  text-decoration: none; 
+  transition: color 0.2s; 
+}
+
+/* Style des liens au survol de la souris */
+nav a:hover {
+  color: #0056b3; 
+}
+
+.hero {
+  text-align: center;
+  padding: 60px 0;
+}
+
+.hero h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.hero p {
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.cta-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #0056b3;
+}
+
+/* Style de la section des articles en vedette */
+.featured-articles {
+  display: flex;
+  justify-content: space-around;
+  margin: 40px 0;
+}
+
+.featured-articles article {
+  text-align: center;
+  max-width: 300px;
+}
+
+.featured-articles img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.featured-articles h3 {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.featured-articles p {
+  font-size: 16px;
+  margin: 10px 0;
+}
+
+.featured-articles a {
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #007BFF;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.featured-articles a:hover {
+  background-color: #0056b3;
+}
+
+/* Style du pied de page */
+.footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.social-icons {
+  margin-bottom: 10px;
+}
+
+.social-icon img {
+  width: 30px;
+  height: auto;
+  margin: 0 10px;
+}
+
+/* Style spécifique pour les réseaux sociaux */
+.social-icon a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.social-icon a:hover {
+  color: #007BFF;
+}
+.maths-in-real-life {
+  background-color: #f2f2f2; 
+  padding: 50px 0; 
+  text-align: center; 
+}
+
+/* Style pour le conteneur */
+.container {
+  max-width: 800px; 
+  margin: 0 auto; 
+}
+
+/* Style pour l'aperçu de l'image */
+.image-preview img {
+  max-width: 100%; 
+  height: auto; 
+  margin-top: 20px; 
 }
